# EE478_2025S

./: .gitignore  README.md  micoair_h743-v2_default.px4
ee478_px4_sim/: CMakeLists.txt  package.xml
ee478_px4_sim/launch/: start_sim.launch
ee478_px4_sim/models/apriltag_36h11_00/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_01/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_02/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_03/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_04/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_05/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_06/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_07/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_08/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_09/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_10/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_11/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_12/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_13/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_14/: model.config  model.sdf
ee478_px4_sim/models/apriltag_36h11_15/: model.config  model.sdf
ee478_px4_sim/models/gate_00/: model.config  model.sdf
ee478_px4_sim/models/gate_01/: model.config  model.sdf
ee478_px4_sim/models/gate_02/: model.config  model.sdf
ee478_px4_sim/resources/: quiz.txt
ee478_px4_sim/scripts/: generate_qr_code.py  spawn_gate.py
(+49 files in other folders)
